--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,5 +1,6 @@
 @import "base.style";
 
-// Pages
+// Pages & Layouts
+@import "header.style";
 @import "home.style";
 @import "photographer.style";
