--- a/styles/_base.style.scss
+++ b/styles/_base.style.scss
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans&display=swap");
 
+@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200");
+
+.material-symbols-outlined {
+  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 48;
+}
+
 *,
 *:before,
 *:after {
@@ -8,7 +14,9 @@
 
 body {
   font-family: "DM Sans", sans-serif;
-  margin: 0;
+  margin: 0 auto;
+  font-size: 16px;
+  max-width: 1040px;
 }
 
 h1,
