--- a/styles/global.css
+++ b/styles/global.css
@@ -151,7 +151,7 @@ h1 {
 
 .card__location {
   font-size: 1.35rem;
-  color: #d3573c;
+  color: #901c1c;
 }
 
 .card__price {
@@ -172,7 +172,6 @@ h1 {
           align-items: center;
   background-color: #fafafa;
   height: 300px;
-  padding: 0 3.1rem;
 }
 
 .photograph-header .desc {
@@ -193,7 +192,7 @@ h1 {
 
 .photograph-header .desc__location {
   font-size: 1.5rem;
-  color: #d3573c;
+  color: #901c1c;
 }
 
 .photograph-header .desc__tagline {
@@ -302,6 +301,7 @@ h1 {
 .photograph__media .photograph-media-card .desc__wrapper .likes__container .likes__number {
   font-size: 1rem;
   margin-right: 0.35rem;
+  color: #000000;
 }
 
 .photograph__media .photograph-media-card .desc__wrapper .likes__container .likes__icon {
