--- a/styles/_base.style.scss
+++ b/styles/_base.style.scss
@@ -13,10 +13,11 @@
 }
 
 body {
-  font-family: "DM Sans", sans-serif;
-  margin: 0 auto;
-  font-size: 16px;
   max-width: 1040px;
+  margin: 0 auto;
+  padding: 0 1rem;
+  font-family: "DM Sans", sans-serif;
+  font-size: 16px;
 }
 
 h1,
