--- a/styles/_photographer.style.scss
+++ b/styles/_photographer.style.scss
@@ -54,7 +54,7 @@
 .photograph__media {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   gap: 2rem;
 
