--- a/styles/_photographer.style.scss
+++ b/styles/_photographer.style.scss
@@ -1,3 +1,7 @@
+.photograph__header {
+  position: relative;
+}
+
 .photograph-header {
   display: grid;
   grid-template-columns: 1.5fr 1fr 1fr;
@@ -117,4 +121,101 @@
       }
     }
   }
+}
+
+//
+//
+//
+.photograph-infos {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  position: fixed;
+  bottom: 0;
+  right: 2rem;
+
+  width: 376px;
+  padding: 1.4rem 2rem;
+
+  background-color: #db8876;
+  border-radius: 5px;
+
+  .likes__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    .likes__number {
+      font-size: 1.5rem;
+      margin-right: 0.35rem;
+      color: #000000;
+    }
+
+    .likes__icon {
+      font-size: 1.5rem;
+    }
+  }
+
+  .price {
+    font-size: 1.5rem;
+  }
+}
+
+#contact_modal {
+  display: none;
+}
+
+.modal {
+  border-radius: 5px;
+  background-color: #db8876;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 35px;
+  margin: auto;
+}
+
+.modal header {
+  justify-content: space-between;
+  width: 100%;
+}
+
+.modal header img {
+  cursor: pointer;
+}
+
+.modal header h2 {
+  font-size: 64px;
+  font-weight: normal;
+  text-align: center;
+}
+
+form {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+form label {
+  color: #312e2e;
+  font-size: 36px;
+}
+
+form div {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: self-start;
+  margin-bottom: 26px;
+}
+
+form input {
+  width: 100%;
+  height: 68px;
+  border: none;
+  border-radius: 5px;
 }
