--- a/styles/global.css
+++ b/styles/global.css
@@ -11,6 +11,7 @@
           box-sizing: border-box;
 }
 
+html,
 body {
   max-width: 1040px;
   margin: 0 auto;
@@ -98,6 +99,8 @@ h1 {
   width: 350px;
   height: 350px;
   border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .photographer_section article h2 {
@@ -223,6 +226,8 @@ h1 {
   height: 200px;
   border-radius: 50%;
   margin-left: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .photograph__media {
