--- a/styles/global.css
+++ b/styles/global.css
@@ -43,6 +43,10 @@ a {
   text-decoration: none;
 }
 
+main {
+  position: relative;
+}
+
 header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -365,12 +369,17 @@ h1 {
 
 #contact_modal {
   display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  overflow-y: auto;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-color: rgba(77, 77, 77, 0.4);
 }
 
 .modal {
-  border-radius: 5px;
-  background-color: #db8876;
-  width: 50%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -378,14 +387,24 @@ h1 {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 35px;
-  margin: auto;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  overflow: hidden;
+  position: relative;
+  border-radius: 5px;
+  background-color: #db8876;
+  width: 100%;
+  max-width: 450px;
+  margin: 1rem auto;
+  padding: 2rem;
+  -webkit-animation-name: modalopen;
+          animation-name: modalopen;
+  -webkit-animation-duration: 0.5s;
+          animation-duration: 0.5s;
 }
 
 .modal header {
@@ -397,10 +416,14 @@ h1 {
 
 .modal header img {
   cursor: pointer;
+  width: 1rem;
+  position: absolute;
+  top: 2rem;
+  right: 2rem;
 }
 
 .modal header h2 {
-  font-size: 64px;
+  font-size: 2.5rem;
   font-weight: normal;
   text-align: center;
 }
@@ -409,7 +432,6 @@ form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 100%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -417,14 +439,10 @@ form {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
+  width: 100%;
 }
 
-form label {
-  color: #312e2e;
-  font-size: 36px;
-}
-
-form div {
+form .form__data {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -432,17 +450,69 @@ form div {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 100%;
   -webkit-box-align: self-start;
       -ms-flex-align: self-start;
           align-items: self-start;
-  margin-bottom: 26px;
+  width: 100%;
+  margin: 0.55rem 0;
 }
 
-form input {
+form .form__data label {
+  color: #312e2e;
+  font-size: 1.5rem;
+  margin-bottom: 0.25rem;
+}
+
+form .form__data input {
   width: 100%;
-  height: 68px;
+  padding: 0.75rem;
   border: none;
   border-radius: 5px;
+  outline: none;
+}
+
+form .form__data textarea {
+  width: 100%;
+  padding: 0.75rem;
+  border-radius: 5px;
+  outline: none;
+}
+
+form button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 1rem;
+  font-weight: 700;
+  background: #901c1c;
+  margin-top: 1rem;
+  padding: 1rem 3rem;
+  color: #fff;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+  outline: none;
+}
+
+@-webkit-keyframes modalopen {
+  from {
+    opacity: 0;
+    -webkit-transform: translateX(-150px);
+            transform: translateX(-150px);
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes modalopen {
+  from {
+    opacity: 0;
+    -webkit-transform: translateX(-150px);
+            transform: translateX(-150px);
+  }
+  to {
+    opacity: 1;
+  }
 }
 /*# sourceMappingURL=global.css.map */
