--- a/styles/_photographer.style.scss
+++ b/styles/_photographer.style.scss
@@ -34,17 +34,18 @@
   }
 
   button {
+    padding: 1rem 2rem;
+    margin: 0 auto;
+    border: none;
+
+    border-radius: 5px;
+    background-color: #901c1c;
+
     font-size: 1.25rem;
     font-weight: 700;
     color: white;
-    padding: 11px;
-    width: 170px;
-    height: 70px;
-    border: none;
-    background-color: #901c1c;
-    border-radius: 5px;
+
     cursor: pointer;
-    margin: 0 auto;
   }
 
   img {
