--- a/styles/_modal.style.scss
+++ b/styles/_modal.style.scss
@@ -1,4 +1,4 @@
-#contact_modal {
+#contactModal {
   display: none;
 
   position: fixed;
@@ -31,77 +31,6 @@
 
   animation-name: modalopen;
   animation-duration: 0.5s;
-
-  header {
-    justify-content: space-between;
-    width: 100%;
-
-    img {
-      position: absolute;
-      top: 2rem;
-      right: 2rem;
-
-      width: 1rem;
-
-      cursor: pointer;
-    }
-
-    h2 {
-      font-size: 2.5rem;
-      font-weight: normal;
-      text-align: center;
-    }
-  }
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-
-  width: 100%;
-
-  .form__data {
-    display: flex;
-    flex-direction: column;
-    align-items: self-start;
-
-    width: 100%;
-    margin: 0.55rem 0;
-
-    label {
-      color: #312e2e;
-      font-size: 1.5rem;
-      margin-bottom: 0.25rem;
-    }
-
-    input,
-    textarea {
-      width: 100%;
-      padding: 0.75rem;
-      border: none;
-      border-radius: 5px;
-      outline: none;
-    }
-  }
-
-  button {
-    display: flex;
-
-    margin-top: 1rem;
-    padding: 1rem 3rem;
-
-    border: none;
-    border-radius: 5px;
-    outline: none;
-    background: #901c1c;
-
-    font-size: 1rem;
-    font-weight: 700;
-    color: #fff;
-
-    cursor: pointer;
-  }
 }
 
 @keyframes modalopen {
