--- a/styles/global.css
+++ b/styles/global.css
@@ -427,7 +427,7 @@ h1 {
   }
 }
 
-header {
+.contact-form__header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -442,7 +442,7 @@ header {
   width: 100%;
 }
 
-header img {
+.contact-form__header img {
   position: absolute;
   top: 2rem;
   right: 2rem;
@@ -450,7 +450,7 @@ header img {
   cursor: pointer;
 }
 
-header h2 {
+.contact-form__header h2 {
   font-size: 2.5rem;
   font-weight: normal;
 }
@@ -523,28 +523,20 @@ form button {
 
 /* Errors */
 .form__data[data-error]::after {
+  content: attr(data-error);
   display: block;
   -webkit-box-pack: right;
       -ms-flex-pack: right;
           justify-content: right;
-  content: attr(data-error);
-  font-size: 0.75rem;
-  color: #ffffff;
   margin-top: 1rem;
   margin-bottom: 0.5rem;
+  width: 100%;
+  font-size: 0.75rem;
+  color: #ffffff;
   text-align: right;
   line-height: 0.3;
   opacity: 1;
   -webkit-transition: 0.3s;
   transition: 0.3s;
-  width: 100%;
-}
-
-.form__data[data-error-visible="true"]::after {
-  opacity: 1;
-}
-
-.form__data[data-error-visible="true"] .text-control {
-  border: 2px solid #e54858;
 }
 /*# sourceMappingURL=global.css.map */
