--- a/styles/_lightbox.style.scss
+++ b/styles/_lightbox.style.scss
@@ -1,10 +1,15 @@
 .lightbox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(255, 255, 255, 1);
+  // background-color: aquamarine;
   z-index: 10;
   overflow: auto;
 
@@ -18,17 +23,19 @@
     opacity: 0.5;
   }
 
-  &__wrapper {
-    position: relative;
-
-    // margin: 1rem 3rem;
-    // overflow: hidden;
-  }
-
   &.fadeOut {
     opacity: 0;
     display: none;
   }
+}
+
+.lightbox__wrapper {
+  position: relative;
+  max-width: 1040px;
+  width: 95%;
+  margin: auto;
+
+  // background-color: bisque;
 }
 
 .lightbox__next,
@@ -41,7 +48,8 @@
 
   position: absolute;
   top: 50%;
-  right: 11.75rem;
+  right: 3rem;
+  // right: 11.75rem;
 
   margin-top: -1.125rem;
   z-index: 11;
@@ -49,7 +57,7 @@
 
 .lightbox__prev {
   right: auto;
-  left: 11.75rem;
+  left: 3rem;
   transform: rotate(180deg);
 }
 
@@ -60,8 +68,8 @@
   height: 1.5rem;
   border: none;
   position: absolute;
-  top: 0;
-  right: 11.75rem;
+  top: 2rem;
+  right: 3rem;
   z-index: 12;
 }
 
@@ -72,13 +80,16 @@
   align-items: center;
 
   position: relative;
+  margin: 2rem 6rem;
+  max-width: 100%;
+  min-height: 100%;
 
-  margin: 2rem 12rem;
-  min-height: 100vh;
+  // background-color: blueviolet;
 
   img {
     max-width: 1040px;
     max-height: 1040px;
+    width: 100%;
 
     height: auto;
   }
