adding likes to a media

--- a/styles/global.css
+++ b/styles/global.css
@@ -309,6 +309,7 @@ h1 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  cursor: pointer;
 }
 
 .photograph__media .photograph-media-card .desc__wrapper .like__container .like__number {
