--- a/styles/_photographer.style.scss
+++ b/styles/_photographer.style.scss
@@ -111,6 +111,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        cursor: pointer;
 
         .like__number {
           font-size: 1rem;
