created multiple sorting type

--- a/styles/_photographer.style.scss
+++ b/styles/_photographer.style.scss
@@ -57,7 +57,7 @@
   }
 }
 
-.photograph__media {
+.media__grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   justify-content: space-between;
