--- a/styles/_customSelect.style.scss
+++ b/styles/_customSelect.style.scss
@@ -2,13 +2,20 @@
   display: flex;
   justify-content: start;
   align-items: center;
+  gap: 1rem;
 
   width: 100%;
+  margin-bottom: 1rem;
 }
 
-.custom-select {
+#sortSelector {
   position: relative;
-  margin: 50px;
+  padding: 1rem 3rem;
+  color: white;
+  font-size: 1rem;
+  border-radius: 5px;
+
+  background-color: #911c1c;
 
   li {
     list-style-type: none;
