--- a/styles/global.css
+++ b/styles/global.css
@@ -669,15 +669,21 @@ form button {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  gap: 1rem;
   width: 100%;
+  margin-bottom: 1rem;
 }
 
-.custom-select {
+#sortSelector {
   position: relative;
-  margin: 50px;
+  padding: 1rem 3rem;
+  color: white;
+  font-size: 1rem;
+  border-radius: 5px;
+  background-color: #911c1c;
 }
 
-.custom-select li {
+#sortSelector li {
   list-style-type: none;
 }
 
